[package]
name = "rustor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-channel = "1.7.1"
indicatif = "0.17.2"
rand = "0.8.5"
reqwest = "0.11.12"
serde = "1.0.147"
serde_bencode = "0.2.3"
serde_bytes = "0.11.7"
serde_derive = "1.0.147"
sha-1 = "0.10.0"
tokio = { version = "1.21.2", features = ["full"] }
urlencoding = "2.1.2"
